<resources>
    <string name="app_name">Cantilado</string>
    <string name="send"> Send JP </string>
    <string name="title">HELLO ANDROID</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="Message">Message</string>
    <string name="Linearlayout">Linear Layout</string>
    <string name="Relative">Relative Layout</string>
    <string name="Constraint">Constraint Layout</string>
    <string name="search">SEARCH</string>
    <string name="dog"> Dog </string>
    <string name="cats"> Cats </string>
    <string name="pirates"> Pirates </string>
    <string name="ninjas">Ninjas</string>
    <string name="on">ON</string>
    <string name="toggles">Toggles</string>
    <string name="select">select a robot...</string>
    <string name="firstFragment"> First Fragment</string>
    <string name="secondFragment"> Second Fragment</string>
    <color name="button_background_color">#FF4081</color>
    <color name="button_bacground_color2">#98ddca</color>
    <color name="button_bacground_color3">#ffd600</color>

    <string-array name="array_technology">
        <item>Android</item>
        <item>Java</item>
        <item>Php</item>
        <item>Hadoop</item>
        <item>Sap</item>
        <item>Python</item>
        <item>Ajax</item>
        <item>C++</item>
        <item>Ruby</item>
        <item>Rails</item>
        <item>.Net</item>
        <item>Perl</item>
    </string-array>

    <string-array name="Robots_array">
        <item>Linguo</item>
        <item>The Mars Rover</item>
        <item>The Pink Robots</item>
        <item>Metal Gear Rex</item>
        <item>‘Intergalactic’ Robot</item>
        <item>T-1000</item>
        <item>Maria</item>
        <item>Sonny</item>
        <item>R2-D2</item>
        <item>Robble</item>
        <item>Optimus Prime</item>
        <item>BB-8</item>
        <item>Dalek</item>
        <item>C-3PO</item>
        <item>Gart</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

