<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="495dp"
        android:background="#EDEEF3"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.741">

        <EditText
            android:id="@+id/editTextTextPersonName12"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/to" />

        <EditText
            android:id="@+id/editTextTextPersonName14"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/subject" />

        <EditText
            android:id="@+id/editTextTextPersonName15"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Message" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>