<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="setOnclickListener"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="262dp"
        android:layout_marginEnd="86dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/subject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="86dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/to"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="335dp"
        android:layout_marginEnd="85dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="212dp"
        android:layout_marginTop="516dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="37dp"
        android:text="@string/send" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="221dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="491dp"
        android:text="@string/Relative"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textStyle="bold" />


</RelativeLayout>

